--- a/src/locales/pt-BR/translation.json
+++ b/src/locales/pt-BR/translation.json
@@ -333,6 +333,8 @@
     "language": "Idioma",
     "autoDetect": "Detecção Automática",
     "changeAccountPassword": "Alterar senha da conta",
+    "passwordResetTitle": "Redefinir Senha",
+    "passwordResetDescription": "Você está prestes a redefinir sua senha. Isso fará com que você seja desconectado de todas as sessões ativas.",
     "enterSixDigitCode": "Digite o código de 6 dígitos dos logs do container docker para o usuário:",
     "enterNewPassword": "Digite sua nova senha para o usuário:",
     "passwordsDoNotMatch": "As senhas não correspondem",
@@ -1217,8 +1219,8 @@
     "confirmNewPassword": "Confirmar Senha",
     "enterNewPassword": "Digite sua nova senha para o usuário:",
     "passwordResetSuccess": "Sucesso!",
-    "passwordResetSuccessDesc": "Sua senha foi redefinida com sucesso! Você pode agora entrar com sua nova senha.",
-    "signUp": "Cadastrar"
+    "signUp": "Cadastrar",
+    "dataLossWarning": "Redefinir sua senha desta forma excluirá todos os seus hosts SSH salvos, credenciais e outros dados criptografados. Esta ação não pode ser desfeita. Use isso apenas se você esqueceu sua senha e não está logado."
   },
   "errors": {
     "notFound": "Página não encontrada",
@@ -1289,7 +1291,10 @@
     "authMethod": "Método de Autenticação",
     "local": "Local",
     "external": "Externo (OIDC)",
-    "selectPreferredLanguage": "Selecione seu idioma preferido para a interface"
+    "selectPreferredLanguage": "Selecione seu idioma preferido para a interface",
+    "currentPassword": "Senha Atual",
+    "passwordChangedSuccess": "Senha alterada com sucesso! Por favor, faça login novamente.",
+    "failedToChangePassword": "Falha ao alterar a senha. Por favor, verifique sua senha atual e tente novamente."
   },
   "user": {
     "failedToLoadVersionInfo": "Falha ao carregar informações da versão"
