feat: add custom command buttons to server stats
Add ability to create and execute custom SSH commands from server stats page:
- Database schema and CRUD API for custom buttons
- SSH command execution with output display
- Management dialog with modern UI
- Multi-language support (en, zh, de, pt-BR)

--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -1088,7 +1088,34 @@
     "refreshing": "Aktualisieren...",
     "serverOffline": "Server offline",
     "cannotFetchMetrics": "Metriken können nicht vom Offline-Server abgerufen werden",
-    "load": "Laden"
+    "load": "Laden",
+    "manageButtons": "Schaltflächen verwalten",
+    "customButtons": "Benutzerdefinierte Schaltflächen",
+    "addButton": "Schaltfläche hinzufügen",
+    "editButton": "Schaltfläche bearbeiten",
+    "deleteButton": "Schaltfläche löschen",
+    "buttonLabel": "Schaltflächenbezeichnung",
+    "buttonCommand": "Befehl",
+    "buttonIcon": "Symbol",
+    "executeButton": "Ausführen",
+    "commandOutput": "Befehlsausgabe",
+    "commandExecuting": "Befehl wird ausgeführt...",
+    "commandSuccess": "Befehl erfolgreich ausgeführt",
+    "commandFailed": "Befehlsausführung fehlgeschlagen",
+    "deleteButtonConfirm": "Möchten Sie die Schaltfläche \"{{label}}\" wirklich löschen?",
+    "buttonCreated": "Schaltfläche erfolgreich erstellt",
+    "buttonUpdated": "Schaltfläche erfolgreich aktualisiert",
+    "buttonDeleted": "Schaltfläche erfolgreich gelöscht",
+    "noCustomButtons": "Keine benutzerdefinierten Schaltflächen",
+    "noCustomButtonsMessage": "Für diesen Server wurden keine benutzerdefinierten Schaltflächen konfiguriert. Klicken Sie auf \"Schaltflächen verwalten\", um welche hinzuzufügen.",
+    "enterButtonLabel": "Schaltflächenbezeichnung eingeben",
+    "enterCommand": "Auszuführenden Befehl eingeben",
+    "iconOptional": "Symbolname (optional)",
+    "failedToFetchButtons": "Abrufen der benutzerdefinierten Schaltflächen fehlgeschlagen",
+    "failedToCreateButton": "Erstellen der Schaltfläche fehlgeschlagen",
+    "failedToUpdateButton": "Aktualisieren der Schaltfläche fehlgeschlagen",
+    "failedToDeleteButton": "Löschen der Schaltfläche fehlgeschlagen",
+    "failedToExecuteCommand": "Ausführen des Befehls fehlgeschlagen"
   },
   "auth": {
     "loginTitle": "Melden Sie sich bei Termix an",
