--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1214,7 +1214,34 @@
     "noInterfacesFound": "No network interfaces found",
     "totalProcesses": "Total Processes",
     "running": "Running",
-    "noProcessesFound": "No processes found"
+    "noProcessesFound": "No processes found",
+    "manageButtons": "Manage Buttons",
+    "customButtons": "Custom Buttons",
+    "addButton": "Add Button",
+    "editButton": "Edit Button",
+    "deleteButton": "Delete Button",
+    "buttonLabel": "Button Label",
+    "buttonCommand": "Command",
+    "buttonIcon": "Icon",
+    "executeButton": "Execute",
+    "commandOutput": "Command Output",
+    "commandExecuting": "Executing command...",
+    "commandSuccess": "Command executed successfully",
+    "commandFailed": "Command execution failed",
+    "deleteButtonConfirm": "Are you sure you want to delete button \"{{label}}\"?",
+    "buttonCreated": "Button created successfully",
+    "buttonUpdated": "Button updated successfully",
+    "buttonDeleted": "Button deleted successfully",
+    "noCustomButtons": "No custom buttons",
+    "noCustomButtonsMessage": "No custom buttons configured for this server. Click \"Manage Buttons\" to add some.",
+    "enterButtonLabel": "Enter button label",
+    "enterCommand": "Enter command to execute",
+    "iconOptional": "Icon name (optional)",
+    "failedToFetchButtons": "Failed to fetch custom buttons",
+    "failedToCreateButton": "Failed to create button",
+    "failedToUpdateButton": "Failed to update button",
+    "failedToDeleteButton": "Failed to delete button",
+    "failedToExecuteCommand": "Failed to execute command"
   },
   "auth": {
     "loginTitle": "Login to Termix",
