--- a/src/locales/pt-BR/translation.json
+++ b/src/locales/pt-BR/translation.json
@@ -1136,7 +1136,34 @@
     "cannotFetchMetrics": "Não é possível buscar métricas do servidor offline",
     "load": "Carga",
     "free": "Livre",
-    "available": "Disponível"
+    "available": "Disponível",
+    "manageButtons": "Gerenciar Botões",
+    "customButtons": "Botões Personalizados",
+    "addButton": "Adicionar Botão",
+    "editButton": "Editar Botão",
+    "deleteButton": "Excluir Botão",
+    "buttonLabel": "Rótulo do Botão",
+    "buttonCommand": "Comando",
+    "buttonIcon": "Ícone",
+    "executeButton": "Executar",
+    "commandOutput": "Saída do Comando",
+    "commandExecuting": "Executando comando...",
+    "commandSuccess": "Comando executado com sucesso",
+    "commandFailed": "Falha na execução do comando",
+    "deleteButtonConfirm": "Tem certeza de que deseja excluir o botão \"{{label}}\"?",
+    "buttonCreated": "Botão criado com sucesso",
+    "buttonUpdated": "Botão atualizado com sucesso",
+    "buttonDeleted": "Botão excluído com sucesso",
+    "noCustomButtons": "Nenhum botão personalizado",
+    "noCustomButtonsMessage": "Nenhum botão personalizado configurado para este servidor. Clique em \"Gerenciar Botões\" para adicionar alguns.",
+    "enterButtonLabel": "Digite o rótulo do botão",
+    "enterCommand": "Digite o comando a executar",
+    "iconOptional": "Nome do ícone (opcional)",
+    "failedToFetchButtons": "Falha ao buscar botões personalizados",
+    "failedToCreateButton": "Falha ao criar botão",
+    "failedToUpdateButton": "Falha ao atualizar botão",
+    "failedToDeleteButton": "Falha ao excluir botão",
+    "failedToExecuteCommand": "Falha ao executar comando"
   },
   "auth": {
     "loginTitle": "Entrar no Termix",
