--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -1195,7 +1195,34 @@
     "noInterfacesFound": "未找到网络接口",
     "totalProcesses": "总进程数",
     "running": "运行中",
-    "noProcessesFound": "未找到进程"
+    "noProcessesFound": "未找到进程",
+    "manageButtons": "管理按钮",
+    "customButtons": "自定义按钮",
+    "addButton": "添加按钮",
+    "editButton": "编辑按钮",
+    "deleteButton": "删除按钮",
+    "buttonLabel": "按钮标签",
+    "buttonCommand": "命令",
+    "buttonIcon": "图标",
+    "executeButton": "执行",
+    "commandOutput": "命令输出",
+    "commandExecuting": "正在执行命令...",
+    "commandSuccess": "命令执行成功",
+    "commandFailed": "命令执行失败",
+    "deleteButtonConfirm": "确定要删除按钮 \"{{label}}\" 吗？",
+    "buttonCreated": "按钮创建成功",
+    "buttonUpdated": "按钮更新成功",
+    "buttonDeleted": "按钮删除成功",
+    "noCustomButtons": "无自定义按钮",
+    "noCustomButtonsMessage": "此服务器未配置自定义按钮。点击\"管理按钮\"添加一些。",
+    "enterButtonLabel": "输入按钮标签",
+    "enterCommand": "输入要执行的命令",
+    "iconOptional": "图标名称（可选）",
+    "failedToFetchButtons": "获取自定义按钮失败",
+    "failedToCreateButton": "创建按钮失败",
+    "failedToUpdateButton": "更新按钮失败",
+    "failedToDeleteButton": "删除按钮失败",
+    "failedToExecuteCommand": "执行命令失败"
   },
   "auth": {
     "loginTitle": "登录 Termix",
