--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -247,7 +247,11 @@
     "saveError": "Error saving configuration",
     "saving": "Saving...",
     "saveConfig": "Save Configuration",
-    "helpText": "Enter the URL where your Termix server is running (e.g., http://localhost:30001 or https://your-server.com)"
+    "helpText": "Enter the URL where your Termix server is running (e.g., http://localhost:30001 or https://your-server.com)",
+    "warning": "Warning",
+    "notValidatedWarning": "URL not validated - ensure it's correct",
+    "changeServer": "Change Server",
+    "mustIncludeProtocol": "Server URL must start with http:// or https://"
   },
   "versionCheck": {
     "error": "Version Check Error",
@@ -467,6 +471,13 @@
     "userDeletedSuccessfully": "User {{username}} deleted successfully",
     "failedToDeleteUser": "Failed to delete user",
     "overrideUserInfoUrl": "Override User Info URL (not required)",
+    "failedToFetchSessions": "Failed to fetch sessions",
+    "sessionRevokedSuccessfully": "Session revoked successfully",
+    "failedToRevokeSession": "Failed to revoke session",
+    "confirmRevokeSession": "Are you sure you want to revoke this session?",
+    "confirmRevokeAllSessions": "Are you sure you want to revoke all sessions for this user?",
+    "failedToRevokeSessions": "Failed to revoke sessions",
+    "sessionsRevokedSuccessfully": "Sessions revoked successfully",
     "databaseSecurity": "Database Security",
     "encryptionStatus": "Encryption Status",
     "encryptionEnabled": "Encryption Enabled",
@@ -1297,6 +1308,13 @@
     "confirmNewPassword": "Confirm Password",
     "enterNewPassword": "Enter your new password for user:",
     "signUp": "Sign Up",
+    "mobileApp": "Mobile App",
+    "loggingInToMobileApp": "Logging in to the mobile app",
+    "desktopApp": "Desktop App",
+    "loggingInToDesktopApp": "Logging in to the desktop app",
+    "loggingInToDesktopAppViaWeb": "Logging in to the desktop app via web interface",
+    "loadingServer": "Loading server...",
+    "authenticating": "Authenticating...",
     "dataLossWarning": "Resetting your password this way will delete all your saved SSH hosts, credentials, and other encrypted data. This action cannot be undone. Only use this if you have forgotten your password and are not logged in.",
     "authenticationDisabled": "Authentication Disabled",
     "authenticationDisabledDesc": "All authentication methods are currently disabled. Please contact your administrator."
@@ -1433,6 +1451,7 @@
     "closeDeleteAccount": "Close Delete Account",
     "deleteAccountWarning": "This action cannot be undone. This will permanently delete your account and all associated data.",
     "deleteAccountWarningDetails": "Deleting your account will remove all your data including SSH hosts, configurations, and settings. This action is irreversible.",
+    "deleteAccountWarningShort": "This action is not reversible and will permanently delete your account.",
     "cannotDeleteAccount": "Cannot Delete Account",
     "lastAdminWarning": "You are the last admin user. You cannot delete your account as this would leave the system without any administrators. Please make another user an admin first, or contact system support.",
     "confirmPassword": "Confirm Password",
