--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -54,7 +54,7 @@
     "sshPrivateKey": "SSH Private Key",
     "upload": "Upload",
     "updateKey": "Update Key",
-    "keyPassword": "Key Password (optional)",
+    "keyPassword": "Key Password",
     "keyType": "Key Type",
     "keyTypeRSA": "RSA",
     "keyTypeECDSA": "ECDSA",
@@ -287,6 +287,8 @@
     "loading": "Loading",
     "required": "Required",
     "optional": "Optional",
+    "connect": "Connect",
+    "connecting": "Connecting...",
     "clear": "Clear",
     "toggleSidebar": "Toggle Sidebar",
     "sidebar": "Sidebar",
@@ -778,7 +780,7 @@
     "terminalCustomizationNotice": "Note: Terminal customizations only work on desktop (website and Electron app). Mobile apps and mobile website use system default terminal settings.",
     "noneAuthTitle": "Keyboard-Interactive Authentication",
     "noneAuthDescription": "This authentication method will use keyboard-interactive authentication when connecting to the SSH server.",
-    "noneAuthDetails": "Keyboard-interactive authentication allows the server to prompt you for credentials during connection. This is useful for servers that require multi-factor authentication or dynamic password entry."
+    "noneAuthDetails": "Keyboard-interactive authentication allows the server to prompt you for credentials during connection. This is useful for servers that require multi-factor authentication or if you do not want to save credentials locally."
   },
   "terminal": {
     "title": "Terminal",
@@ -1275,6 +1277,16 @@
     "yourBackupCodes": "Your Backup Codes",
     "download": "Download",
     "setupTwoFactorTitle": "Set Up Two-Factor Authentication",
+    "sshAuthenticationRequired": "SSH Authentication Required",
+    "sshNoKeyboardInteractive": "Keyboard-Interactive Authentication Unavailable",
+    "sshAuthenticationFailed": "Authentication Failed",
+    "sshAuthenticationTimeout": "Authentication Timeout",
+    "sshNoKeyboardInteractiveDescription": "The server does not support keyboard-interactive authentication. Please provide your password or SSH key.",
+    "sshAuthFailedDescription": "The provided credentials were incorrect. Please try again with valid credentials.",
+    "sshTimeoutDescription": "The authentication attempt timed out. Please try again.",
+    "sshProvideCredentialsDescription": "Please provide your SSH credentials to connect to this server.",
+    "sshPasswordDescription": "Enter the password for this SSH connection.",
+    "sshKeyPasswordDescription": "If your SSH key is encrypted, enter the passphrase here.",
     "step1ScanQR": "Step 1: Scan the QR code with your authenticator app",
     "manualEntryCode": "Manual Entry Code",
     "cannotScanQRText": "If you can't scan the QR code, enter this code manually in your authenticator app",
