--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -792,7 +792,9 @@
     "terminalCustomizationNotice": "注意：终端自定义仅在桌面网站版本中有效。移动和 Electron 应用程序使用系统默认终端设置。",
     "noneAuthTitle": "键盘交互式认证",
     "noneAuthDescription": "此认证方法在连接到 SSH 服务器时将使用键盘交互式认证。",
-    "noneAuthDetails": "键盘交互式认证允许服务器在连接期间提示您输入凭据。这对于需要多因素认证或动态密码输入的服务器很有用。"
+    "noneAuthDetails": "键盘交互式认证允许服务器在连接期间提示您输入凭据。这对于需要多因素认证或动态密码输入的服务器很有用。",
+    "forceKeyboardInteractive": "强制键盘交互式认证",
+    "forceKeyboardInteractiveDesc": "强制使用键盘交互式认证。这通常是使用双因素认证（TOTP/2FA）的服务器所必需的。"
   },
   "terminal": {
     "title": "终端",
