--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -355,7 +355,7 @@
     "tabNavigation": "Registerkarte Navigation"
   },
   "admin": {
-    "title": "Administratoreinstellungen",
+    "title": "Admin-Einstellungen",
     "oidc": "OIDC",
     "users": "Benutzer",
     "userManagement": "Benutzerverwaltung",
@@ -390,11 +390,11 @@
     "actions": "Aktionen",
     "external": "Extern",
     "local": "Lokal",
-    "adminManagement": "Verwaltung von Administratoren",
+    "adminManagement": "Admin Verwaltung",
     "makeUserAdmin": "Benutzer zum Administrator machen",
     "adding": "Hinzufügen...",
     "currentAdmins": "Aktuelle Administratoren",
-    "adminBadge": "Administrator",
+    "adminBadge": "Admin",
     "removeAdminButton": "Administrator entfernen",
     "general": "Allgemein",
     "userRegistration": "Benutzerregistrierung",
@@ -1072,7 +1072,7 @@
     "used": "Gebraucht",
     "percentage": "Prozentsatz",
     "refreshStatusAndMetrics": "Aktualisierungsstatus und Metriken",
-    "refreshStatus": "Aktualisierungsstatus",
+    "refreshStatus": "Aktualisieren",
     "fileManagerAlreadyOpen": "Der Dateimanager ist für diesen Host bereits geöffnet",
     "openFileManager": "Dateimanager öffnen",
     "cpuCores_one": "{{count}} CPU",
@@ -1372,7 +1372,7 @@
     "disconnected": "Getrennt",
     "maxRetriesExhausted": "Maximale Wiederholungsversuche ausgeschöpft",
     "endpointHostNotFound": "Endpunkthost nicht gefunden",
-    "administrator": "Administrator",
+    "administrator": "Admin",
     "user": "Benutzer",
     "external": "Extern",
     "local": "Lokal",
