--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -1081,9 +1081,10 @@
     "loadAverageNA": "Durchschnitt: N\/A",
     "cpuUsage": "CPU-Auslastung",
     "memoryUsage": "Speicherauslastung",
+    "diskUsage": "Festplattennutzung",
     "rootStorageSpace": "Root-Speicherplatz",
     "of": "von",
-    "feedbackMessage": "Haben Sie Ideen für die nächsten Schritte im Bereich der Serververwaltung? Teilen Sie diese mit uns",
+    "feedbackMessage": "Haben Sie Ideen, wie es bei der Serververwaltung weitergehen könnte? Dann teilen Sie diese gerne mit uns auf",
     "failedToFetchHostConfig": "Abrufen der Hostkonfiguration fehlgeschlagen",
     "failedToFetchStatus": "Abrufen des Serverstatus fehlgeschlagen",
     "failedToFetchMetrics": "Abrufen der Servermetriken fehlgeschlagen",
@@ -1092,7 +1093,26 @@
     "refreshing": "Aktualisieren...",
     "serverOffline": "Server offline",
     "cannotFetchMetrics": "Metriken können nicht vom Offline-Server abgerufen werden",
-    "load": "Laden"
+    "load": "Last"
+    "available": "Verfügbar",
+    "editLayout": "Layout anpassen",
+    "cancelEdit": "Abbrechen",
+    "addWidget": "Widget hinzufügen",
+    "saveLayout": "Layout speichern",
+    "unsavedChanges": "Ungespeicherte Änderungen",
+    "layoutSaved": "Layout erfolgreich gespeichert",
+    "failedToSaveLayout": "Speichern des Layout fehlgeschlagen",
+    "systemInfo": "System Information",
+    "hostname": "Hostname",
+    "operatingSystem": "Betriebssystem",
+    "kernel": "Kernel",
+    "totalUptime": "Gesamte Betriebszeit",
+    "seconds": "Sekunden",
+    "networkInterfaces": "Netzwerkschnittstellen",
+    "noInterfacesFound": "Keine Netzwerkschnittstellen gefunden",
+    "totalProcesses": "Gesamtprozesse",
+    "running": "läuft",
+    "noProcessesFound": "Keine Prozesse gefunden"
   },
   "auth": {
     "loginTitle": "Melden Sie sich bei Termix an",
